--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,9 @@
 {
   "name": "@nx-chat-assignment/client",
   "version": "0.0.1",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "antd": "^5.24.0",
+    "styled-components": "^6.1.15"
+  }
 }
